# routa

./: .dependency-cruiser.cjs  .env.docker.example  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  api-contract.yaml  card_output.json  docker-compose.dev.yml  docusaurus.config.js  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sidebars.js  tsconfig.json  vitest.config.node.ts  vitest.node.config.ts  vitest.setup.ts
.claude/: launch.json  settings.local.json
.codex/: hooks.json
.github/: CODEOWNERS
.husky/: post-commit  pre-commit
.lanes/: quick-actions.json
.playwright-cli/: page-2026-03-10T12-25-53-777Z.yml  page-2026-03-10T12-25-57-596Z.yml  page-2026-03-10T12-26-40-903Z.yml  (+6 more)
crates/routa-cli/: Cargo.toml
crates/routa-cli/src/: main.rs
crates/routa-cli/src/commands/: acp.rs  acp_serve.rs  agent.rs  chat.rs  feature_tree.rs  harness.rs  kanban.rs  mod.rs  prompt.rs  rpc.rs  server.rs  session.rs  task.rs  team.rs  tui.rs  workflow.rs  workspace.rs
crates/routa-cli/src/commands/agent/: ui_journey.rs  ui_journey_provider.rs
crates/routa-cli/src/commands/fitness/: arch_dsl.rs
crates/routa-cli/src/commands/fitness/arch_dsl/: tests.rs
crates/routa-cli/src/commands/fitness/fluency/: detector.rs  engine.rs  mod.rs  snapshot.rs
crates/routa-cli/src/commands/graph/: analyze.rs
crates/routa-cli/src/commands/harness/engineering/: apply.rs  bootstrap.rs  history.rs  learning.rs  mod.rs  speed_profile.rs  tests.rs  tests_learning.rs  types.rs
crates/routa-cli/src/commands/review/: acp_runner.rs  aggregator.rs  analyze.rs  candidate_collector.rs  dispatch.rs  output.rs  security.rs  shared.rs  stream_parser.rs
crates/routa-cli/tests/: cli_integration.rs
crates/routa-watch/: Cargo.toml  README.md
crates/routa-watch/scripts/: install-hooks.sh  run-codex-hook.sh
crates/routa-watch/src/: db.rs  detect.rs  hooks.rs  ipc.rs  main.rs  models.rs  observe.rs  repo.rs  state.rs  tui.rs  tui_cache.rs  tui_render.rs  tui_tests.rs
crates/routa-watch/src/snapshots/: routa_watch__tui__tests__routa_watch_tui_compact.snap  routa_watch__tui__tests__routa_watch_tui_file_preview.snap  routa_watch__tui__tests__routa_watch_tui_search.snap  routa_watch__tui__tests__routa_watch_tui_summary.snap
crates/routa-watch/templates/: codex-hooks.json
crates/routa-watch/templates/git-hooks/: post-checkout  post-commit  post-merge
crates/trace-learning/: Cargo.toml
crates/trace-learning/src/: analyzer.rs  catalog.rs  codex.rs  error.rs  lib.rs  model.rs  provider.rs  transcript_discovery.rs
(+2103 files in other folders)
