[package]
name = "routa-cli"
version = "0.2.10"
description = "Routa.js CLI — command-line interface for multi-agent coordination"
authors = ["phodal"]
edition = "2021"
license = "MIT"
repository = "https://github.com/phodal/routa-js"
homepage = "https://github.com/phodal/routa-js"

[[bin]]
name = "routa"
path = "src/main.rs"

[lib]
name = "routa_cli"
path = "src/lib.rs"

[dependencies]
# Core domain (transport-agnostic, no HTTP deps)
routa-core = { version = "0.2.9", path = "../routa-core" }

# HTTP server (for the `server` subcommand)
routa-server = { version = "0.2.9", path = "../routa-server" }

# Reusable scanner module
routa-scanner = { version = "0.2.9", path = "../routa-scanner" }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
glob = "0.3"
walkdir = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
dialoguer = "0.11"
console = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
